--- a/Aula12_Ex/ex014/estilo.css
+++ b/Aula12_Ex/ex014/estilo.css
@@ -15,6 +15,10 @@ header{
     text-align: center;
 
 }
+div{
+    text-align: center;
+    padding: 10px;
+}
 footer{
     color: whitesmoke;
     text-align: center;
