--- a/Desafios/Desafio06/estilo.css
+++ b/Desafios/Desafio06/estilo.css
@@ -2,6 +2,10 @@ body{
     background: url("imagens/fundo.gif");
     font: normal 14pt Arial;
 }
+header{
+    text-align: center;
+    font: normal 15pt Arial;
+}
 section{
     width: 500px;
     background: whitesmoke;
