--- a/Desafios/Modelo/estilo.css
+++ b/Desafios/Modelo/estilo.css
@@ -1,24 +1,20 @@
 body{
-    background: rgba(48, 48, 230, 0.582);
+    background: url("imagens/fundo.gif");
+    font: normal 14pt Arial;
+}
+header{
+    text-align: center;
     font: normal 15pt Arial;
 }
 section{
-    background: white;
-    border-radius: 10px;
-    padding: 15px;
     width: 500px;
+    background: whitesmoke;
     margin: auto;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.363);
-}
-header{
-    color: whitesmoke;
-    text-align: center;
+    padding: 25px;
+    box-shadow: 8px 8px 8px  midnightblue;
 }
 footer{
-    color: whitesmoke;
+    font: normal 13pt Arial;
     text-align: center;
-    font-style: italic;
-}
-div{
-    margin-top: 10px;
+    margin-top: 25px;
 }
