--- a/Desafios/Desafio30_Especial_Portugues/estilo.css
+++ b/Desafios/Desafio30_Especial_Portugues/estilo.css
@@ -21,6 +21,20 @@ footer{
 span.destaque{
     color: rgb(146, 31, 31);
 }
-ol{
-    list-style-type: lower-latin;
+
+ol {
+    counter-reset: list;
+    margin: 0; 
+}
+    
+ol > li {
+    list-style: none;
+    position: relative; 
+}
+    
+    ol > li:before {
+    counter-increment: list;
+    content: counter(list, lower-alpha) ") ";
+    position: absolute;
+    left: -1.4em; 
 }
