Desafio11 - Calculadora de IMC

--- a/Desafios/Desafio11/estilo.css
+++ b/Desafios/Desafio11/estilo.css
@@ -18,3 +18,11 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+
+input{
+    width: 65px;
+}
+
+span.altura{
+    margin-left: 10px;
+}
