--- a/Desafios/Desafio15/estilo.css
+++ b/Desafios/Desafio15/estilo.css
@@ -18,3 +18,17 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+
+p.insNome{
+    margin-left: 10px;
+}
+
+input#cNome{
+    margin-left: 12px;
+    margin-right: 5px;
+}
+
+select{
+    width: 150px;
+}
+
