Desafio16 - Maior e menor Altura por genero F ou M

--- a/Desafios/Desafio16/estilo.css
+++ b/Desafios/Desafio16/estilo.css
@@ -51,7 +51,8 @@ div#resultado{
 }
 
 select#cSelDetalhes{
-    width: 160px;
+    width: 180px;
+    margin-top: 7px;
     margin-bottom: 30px;
 }
 
