--- a/Desafios/Desafio17/estilo.css
+++ b/Desafios/Desafio17/estilo.css
@@ -23,3 +23,13 @@ p span{
     font-weight: bold;
     font-size: 14pt;
 }
+
+input#CxNum{
+    width: 50px;
+    margin-right: 15px;
+}
+
+input.btnAdicionar{
+    margin-top: 20px;
+    margin-left: 25px;
+}
