--- a/Desafios/Desafio17/estilo.css
+++ b/Desafios/Desafio17/estilo.css
@@ -33,3 +33,12 @@ input.btnAdicionar{
     margin-top: 20px;
     margin-left: 25px;
 }
+
+div#adicinar{
+    background-color: blueviolet;
+    text-align: center;
+}
+
+select#cSelOpinao{
+    width: 150px;
+}
