--- a/Desafios/Desafio20/estilo.css
+++ b/Desafios/Desafio20/estilo.css
@@ -18,3 +18,14 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+
+input{
+    margin-top: 3px;
+    width: 170px;
+}
+
+input.btnSelecionar{
+    width: 100px;
+    padding: 0px 10px;
+    margin-left: 50px;
+}
