--- a/Desafios/Desafio21/estilo.css
+++ b/Desafios/Desafio21/estilo.css
@@ -18,3 +18,12 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+input#CxValor{
+    width: 75px;
+    margin-right: 15px;
+    margin-left: 5px;
+}
+
+select#CselValAdd{
+    width: 100px;
+}
