--- a/Desafios/Desafio22/estilo.css
+++ b/Desafios/Desafio22/estilo.css
@@ -18,3 +18,11 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+
+div.dados{
+    background: blueviolet;
+}
+
+div.recebidos{
+    background: chocolate;
+}
