Desafio22- Inverter sequencia de caracteres

--- a/Desafios/Desafio22/estilo.css
+++ b/Desafios/Desafio22/estilo.css
@@ -21,8 +21,13 @@ footer{
 
 div.dados{
     background: blueviolet;
+    width: 47%;
+    display: inline-block;
 }
 
 div.recebidos{
     background: chocolate;
+    width: 47%;
+    display: inline-block;
 }
+
