--- a/Desafios/Desafio22/estilo.css
+++ b/Desafios/Desafio22/estilo.css
@@ -20,7 +20,6 @@ footer{
 }
 
 div.dados{
-    background: blueviolet;
     width: 47%;
     display: inline-block;
     margin-top: 0px;
@@ -34,10 +33,10 @@ div.dados input.btnInverter{
 }
 
 div.recebidos{
-    background: chocolate;
     width: 47%;
     display: inline-block;
     box-sizing: border-box;
+    padding-top: 10px;
 }
 
 div.recebidos select{
