--- a/Desafios/Desafio23/estilo.css
+++ b/Desafios/Desafio23/estilo.css
@@ -31,6 +31,18 @@ div.fruta img{
     border: 1px solid black;
 }
 
+div.img{
+    width: 100px;
+    height: 100px;
+}
+
+div.img h1{
+    position: relative;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    top: 0;
+}
+
 div.detalhes{
     width: 30%;
     display: inline-block;
