--- a/Desafios/Desafio23/estilo.css
+++ b/Desafios/Desafio23/estilo.css
@@ -36,11 +36,12 @@ div.img{
     height: 100px;
 }
 
-div.img h1{
+div.morango h1{
     position: relative;
     margin-top: 0px;
     margin-bottom: 0px;
-    top: 0;
+    top: -50px;
+    text-align: center;
 }
 
 div.detalhes{
