--- a/Desafios/Desafio23/estilo.css
+++ b/Desafios/Desafio23/estilo.css
@@ -25,14 +25,24 @@ div.fruta{
 }
 
 div.fruta h1{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     font-size: 12pt;
     color: white;
     text-align: center;
     vertical-align: middle;
-    line-height: 60px;
-    display: none;
+    line-height: 100px;
+    background-color: rgba(0, 0, 0, 0.068);
+    margin-top: 0;
+    border-radius: 15px;
 }
 
+div.fruta h1:hover{
+    background-color: rgba(0, 0, 0, 0.308);
+    color: whitesmoke;
+    text-transform: uppercase;
+}
 
 div.morango {
     position: relative;
