--- a/Desafios/Desafio23/estilo.css
+++ b/Desafios/Desafio23/estilo.css
@@ -20,28 +20,10 @@ footer{
 }
 
 div.fruta{
+    position: relative;
     width: 65%;
     display: inline-block;
-}
-
-div.fruta h1{
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    font-size: 12pt;
-    color: white;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 100px;
-    background-color: rgba(0, 0, 0, 0.226);
-    margin-top: 0;
-    border-radius: 15px;
-}
-
-div.fruta h1:hover{
-    background-color: rgba(0, 0, 0, 0.424);
-    color: whitesmoke;
-    text-transform: uppercase;
+    top: 0;
 }
 
 div.morango {
@@ -67,7 +49,31 @@ div.maca{
     border-radius: 15px;
     cursor: pointer;
 }
+
+div.fruta h1{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    font-size: 12pt;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+    background-color: rgba(0, 0, 0, 0.226);
+    margin-top: 0;
+    border-radius: 15px;
+}
+
+div.fruta h1:hover{
+    background-color: rgba(0, 0, 0, 0.424);
+    color: whitesmoke;
+    text-transform: uppercase;
+}
+
+
 div.detalhes{
+    position: relative;
+    vertical-align: middle;
     width: 30%;
     display: inline-block;
 }
