Desafio25 - Adicional 06- Utilizar o DOM verificando o Focus

--- a/Desafios/Desafio25_adicional_06/estilo.css
+++ b/Desafios/Desafio25_adicional_06/estilo.css
@@ -20,5 +20,11 @@ footer{
 }
 
 div#cx1{
+    color: whitesmoke;
+    background: darkgrey;
+    width: 120px;
+    height: 120px;
+    display: flex;
+    align-items: center;
     
 }
