--- a/Desafios/Desafio25_adicional_06/estilo.css
+++ b/Desafios/Desafio25_adicional_06/estilo.css
@@ -28,5 +28,13 @@ div#cx1{
     background: darkgrey;
     width: 120px;
     height: 120px;
+    margin-right: 50px;
 }
 
+div#cx2{
+    color: white;
+    background: black;
+    width: 120px;
+    height: 120px;
+    margin-left: 50px;
+}
