Desafio25 - Adicional 06- Utilizar o DOM verificando o Focus

--- a/Desafios/Desafio25_adicional_06/estilo.css
+++ b/Desafios/Desafio25_adicional_06/estilo.css
@@ -1,6 +1,7 @@
 body{
     background: url("imagens/fundo.gif");
     font: normal 14pt Arial;
+    user-select: none;
 }
 header{
     text-align: center;
