Desafio25 - Adicional07 - Avaliador de Alunos.

--- a/Desafios/Desafio25_adicional_07/estilo.css
+++ b/Desafios/Desafio25_adicional_07/estilo.css
@@ -29,3 +29,9 @@ input#CxNota{
 div#resultado{
     margin-top: 30px;
 }
+
+span.foco{
+    color: brown;
+    font-weight: bold;
+    font-size: 16pt;
+}
