--- a/Desafios/Desafio34/estilo.css
+++ b/Desafios/Desafio34/estilo.css
@@ -18,3 +18,9 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+
+input#Cxval{
+    width: 80px;
+    text-indent: 7px;
+    margin-right: 15px;
+}
