--- a/Desafios/Desafio35/estilo.css
+++ b/Desafios/Desafio35/estilo.css
@@ -21,6 +21,6 @@ footer{
 
 .foco{
     font-weight: bold;
-    font-size: 16pt;
-    color: darkblue;
+    font-size: 20pt;
+    color: rgb(121, 37, 11);
 }
