Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/estilo.css
+++ b/Desafios/Desafio37/estilo.css
@@ -44,3 +44,9 @@ fieldset.operador{
 div#resultado{
     margin-top: 30px;
 }
+
+.foco{
+    font-weight: bold;
+    color: rgb(102, 7, 7);
+    font-size: 18pt;
+}
