Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/estilo.css
+++ b/Desafios/Desafio38/estilo.css
@@ -28,3 +28,11 @@ input#CxNum{
     margin-right: 15px;
 }
 
+fieldset{
+    width: 150px;
+    display: inline-block;
+    margin-left: 25px;
+}
+select{
+    width: 145px;
+}
