Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/estilo.css
+++ b/Desafios/Desafio38/estilo.css
@@ -28,7 +28,7 @@ input#CxNum{
     margin-right: 15px;
     display: inline-block;
     margin-top: 15px;
-    
+    text-indent: 10px;
 }
 
 .btnAdic{
