Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/estilo.css
+++ b/Desafios/Desafio38/estilo.css
@@ -41,8 +41,9 @@ fieldset{
     width: 180px;
     display: inline-block;
     margin-left: 25px;
-    
+    text-align: center;    
 }
+
 select{
     width: 145px;
 }
