--- a/Desafios/Desafio38/estilo.css
+++ b/Desafios/Desafio38/estilo.css
@@ -27,12 +27,12 @@ input#CxNum{
     width: 70px;
     margin-right: 15px;
     display: inline-block;
-    margin-top: 15px;
+    margin-top: 30px;
     text-indent: 10px;
 }
 
 .btnAdic{
-    margin-top: 10px;
+    margin-top: 30px;
     margin-right: 15px;
     display: inline-block;
 }
@@ -46,4 +46,8 @@ fieldset{
 
 select{
     width: 145px;
+}
+
+.btnVerificar{
+    margin-top: 15px;
 }
