--- a/Desafios/Desafio40/estilo.css
+++ b/Desafios/Desafio40/estilo.css
@@ -18,3 +18,13 @@ footer{
     text-align: center;
     margin-top: 25px;
 }
+
+div.esq{
+    display: inline-block;
+}
+
+div.dir{
+    display: inline-block;
+    margin-left: 20px;
+}
+
