Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/estilo.css
+++ b/Desafios/Desafio40/estilo.css
@@ -24,9 +24,14 @@ div.esq{
     vertical-align: top;
 }
 
+p.alingEsq{
+    margin-top: 10px;
+}
+
 input.btnInsert{
     margin-top: 15px;
     margin-bottom: 10px;
+    margin-left: 100px;
 }
 
 div.dir{
